<resources>
    <string name="app_name">Study Smarter</string>
    <string name="start_str">Start</string>
    <string name="reset_str">Reset</string>
    <string name="pause_str">Pause</string>
    <string name="resume_str">Resume</string>
    <string name="zero_str">0</string>
    <string name="used_str">Used</string>
    <string name="locked_str">Locked</string>
    <string name="not_enough_str">Not enough stars</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notification_str">Notification</string>
    <string name="sound_str">Sound</string>
</resources>