<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".HomeScreen">


    <TextView
        android:id="@+id/home_setting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/home_store_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/home_points_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableEnd="@drawable/ic_star"
        android:drawablePadding="5dp"
        android:text="@string/zero_str"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/home_store_tv"
        app:layout_constraintStart_toEndOf="@+id/home_setting_tv"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/home_timer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:padding="5dp"
        android:text="25 : 00 "
        android:textColor="@color/white"
        android:textSize="65sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_points_tv" />

    <TextView
        android:id="@+id/home_start_pause_resume_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="5dp"
        android:text="@string/start_str"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_timer_tv" />

    <TextView
        android:id="@+id/home_reset_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:enabled="false"
        android:padding="5dp"
        android:text="@string/reset_str"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>